--- a/public/index.html
+++ b/public/index.html
@@ -223,15 +223,16 @@
         <footer class="footer">
             <div class="footer-content">
                 <div class="footer-left">
-                    <span>powered by gemini ai</span>
+                    <span>powered by Gemini AI ✦</span>
                 </div>
                 <div class="footer-right">
-                    <a href="https://github.com/yourusername/readme-generator" target="_blank" class="footer-link">
+                    <a href="https://github.com/KalashMaheshwari/Github-README-Generatorr" target="_blank" class="footer-link">
                         <i class="fab fa-github"></i>
-                        <span>source</span>
+                        <span>SOURCE</span>
                     </a>
                     <span class="separator">•</span>
-                    <a href="#" class="footer-link" onclick="showAbout(); return false;">about</a>
+                    <i class="fab fa-linkedin"></i>
+                    <a href="https://www.linkedin.com/in/kalash-maheshwari-7143b0372" class="footer-link">ABOUT</a>
                 </div>
             </div>
         </footer>
