--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>readme.gen — minimalist documentation generator</title>
+    <title>readme.gen — documentation generator</title>
 
     <script>
         // Immediately set theme to prevent flash
